Ajout de la fonctionnalité d'enregistrer un nouvel utilisateur.

--- a/.env
+++ b/.env
@@ -8,3 +8,10 @@
 # Ajouter le nom de la db s'il n'est pas directement dans le lien donné de base
 
 DATABASE_URL="mongodb+srv://jbragues:qQ6NyDWiZeYB37GY@cluster0.p18os20.mongodb.net/messenger-clone"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=
+GITHUB_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
