Ajout de la possibilité de se connecter avec son compte Github ou Google, cependant il y a une erreur qui apparait.

--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@
 DATABASE_URL="mongodb+srv://jbragues:qQ6NyDWiZeYB37GY@cluster0.p18os20.mongodb.net/messenger-clone"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=470144dd4da138186183
+GITHUB_SECRET=39e43e1ad6e7fc1df43261a7a16197f095439fa8
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=1091847234803-f3b753erip0s5athdbok6ja1f88df0qv.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
