Ajout de la possibilité d'envoyer un message et d'uploader une image. Il reste à faire l'affichage des messages et des images.

--- a/.env
+++ b/.env
@@ -15,3 +15,5 @@ GITHUB_SECRET=39e43e1ad6e7fc1df43261a7a16197f095439fa8
 
 GOOGLE_CLIENT_ID=1091847234803-f3b753erip0s5athdbok6ja1f88df0qv.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dkyeurbja
