Affichage des messages en temps réel grace à pusher.

--- a/.env
+++ b/.env
@@ -17,3 +17,7 @@ GOOGLE_CLIENT_ID=1091847234803-f3b753erip0s5athdbok6ja1f88df0qv.apps.googleuserc
 GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dkyeurbja
+
+NEXT_PUBLIC_PUSHER_APP_KEY=7f5606d5907042ae5180
+PUSHER_APP_ID=1627812
+PUSHER_SECRET=72015665316e3cd473d8
