--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "chess.js": "^1.0.0-beta.6",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "js-chess-engine": "^1.0.2",
     "lodash": "^4.17.21",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
@@ -33,6 +35,7 @@
     "pusher": "^5.1.2",
     "pusher-js": "^8.0.2",
     "react": "18.2.0",
+    "react-chessboard": "^3.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
     "react-hot-toast": "^2.4.1",
